added more styling

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <p class="text">How can I level up my web development expertise in 2025?.</p>
                 <span class="material-symbols-rounded">lightbulb</span>
             </li>
-            <li class="suggestion-item"></li>
+            <li class="suggestion-item">
                 <p class="text">Suggest some useful tools for debugging Javascript Code.</p>
                 <span class="material-symbols-rounded">explore</span>
             </li>
@@ -44,14 +44,16 @@
                         <button id="add-file-btn" type="button" class="material-symbols-rounded">attach_file</button>
                         <button id="send-prompt-btn" class="material-symbols-rounded">arrow_upward</button>
                     </div>
+                    
                 </form>
 
                 <button id="theme-toggle-btn" class="material-symbols-rounded">light_mode</button>
-                <button id="delete-chats-btn" class="material-symbols-rounded">delete</button>
+                    <button id="delete-chats-btn" class="material-symbols-rounded">delete</button>
 
-                <p class="disclaimer-text">Gemini can make mistakes, so double-check it.</p>
+                
 
             </div>
+            <p class="disclaimer-text">Gemini can make mistakes, so double-check it.</p>
         </div>
     </div>
 </body>
