finished with the chat message front design

--- a/index.html
+++ b/index.html
@@ -35,6 +35,18 @@
             </li>
         </ul>
 
+        <!--Chats Container -->
+        <div class="chats-container">
+            <div class="message user-message">
+                <p class="message-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse ab aliquid et velit quo aut quasi impedit labore. Autem sit fugiat assumenda repellat numquam praesentium incidunt nisi corrupti aliquam nesciunt.</p>
+            </div>
+
+            <div class="message bot-message">
+                <img src="avatar.svg" class="avatar" alt="">
+                <p class="message-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse ab aliquid et velit quo aut quasi impedit labore. Autem sit fugiat assumenda repellat numquam praesentium incidunt nisi corrupti aliquam nesciunt.</p>
+            </div>
+        </div>
+
         <!--Prompt Container-->
         <div class="prompt-container">
             <div class="propmt-wrapper">
