set up script to get user message and automate bot response

--- a/index.html
+++ b/index.html
@@ -37,14 +37,7 @@
 
         <!--Chats Container -->
         <div class="chats-container">
-            <div class="message user-message">
-                <p class="message-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse ab aliquid et velit quo aut quasi impedit labore. Autem sit fugiat assumenda repellat numquam praesentium incidunt nisi corrupti aliquam nesciunt.</p>
-            </div>
-
-            <div class="message bot-message">
-                <img src="avatar.svg" class="avatar" alt="">
-                <p class="message-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse ab aliquid et velit quo aut quasi impedit labore. Autem sit fugiat assumenda repellat numquam praesentium incidunt nisi corrupti aliquam nesciunt.</p>
-            </div>
+            
         </div>
 
         <!--Prompt Container-->
@@ -68,5 +61,6 @@
             <p class="disclaimer-text">Gemini can make mistakes, so double-check it.</p>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
