--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="prompt-container">
             <div class="propmt-wrapper">
                 <form action="#" class="prompt-form">
-                    <input type="text" placeholder="Ask Gemini" class="prompt-input" required>
+                    <input type="text" placeholder="Ask Uranus" class="prompt-input" required>
                     <div class="prompt-actions">
                         <button id="add-file-btn" type="button" class="material-symbols-rounded">attach_file</button>
                         <button id="send-prompt-btn" class="material-symbols-rounded">arrow_upward</button>
@@ -58,7 +58,7 @@
                 
 
             </div>
-            <p class="disclaimer-text">Gemini can make mistakes, so double-check it.</p>
+            <p class="disclaimer-text">Uranus can make mistakes, so double-check it.</p>
         </div>
     </div>
     <script src="script.js"></script>
